--- a/WebAPI_Angular/Angular7/src/app/pessoas/pessoas.component.html
+++ b/WebAPI_Angular/Angular7/src/app/pessoas/pessoas.component.html
@@ -4,13 +4,25 @@
 <hr />
 
 <div class="container mt-2">
-  <div>
+
+  <div class="d-flex">
+    <div class="form-inline mr-auto">
+      <div class="form-group mb-2">
+        <label class="mr-2">Filtro:</label>
+        <input type="text"
+               class="form-control mr-2"
+               placeholder="Cliente"
+               [(ngModel)]="filtroLista" />
+      </div>
+    </div>
     <button type="button" class="btn btn-success mb-2"
             (click)="novaPessoa(template)">
       <i class="fa fa-plus-circle"></i>
       Criar Novo
     </button>
+  </div>
 
+  <div>
     <table class="table table-striped">
       <thead class="thead-dark">
         <tr>
@@ -21,7 +33,7 @@
           <th></th>
         </tr>
       </thead>
-      <tbody>
+      <tbody *ngIf="pessoas && pessoas.length">
         <tr *ngFor="let pessoa of pessoas">
           <td>{{pessoa.id}}</td>
           <td>{{pessoa.nome}}</td>
@@ -43,6 +55,15 @@
           </td>
         </tr>
       </tbody>
+      <tfoot *ngIf="!pessoas.length">
+        <tr>
+          <td colspan="7" class="text-center">
+            <h4>
+              Nenhuma pessoa encontrada!
+            </h4>
+          </td>
+        </tr>
+      </tfoot>
     </table>
   </div>
 </div>
